# SphereVST

./: CMakeLists.txt
.github/workflows/: build_windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
